--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:15:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:15:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -201,7 +201,7 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 10</td>
       <td class="greyout">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -281,7 +281,7 @@ E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -314,22 +314,6 @@ E thru 10</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Billy Horschel E
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 10</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -396,6 +380,22 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout leftborder">Billy Horschel +1
++1 thru 11</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -441,7 +441,7 @@ E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -487,7 +487,7 @@ E thru 10</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth(W) +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Patrick Cantlay +1
 +1 thru 10</td>
     </tr>
@@ -505,7 +505,7 @@ E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -535,7 +535,7 @@ E thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -583,7 +583,7 @@ E thru 9</td>
       <td>Shane Lowry +1
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -633,7 +633,7 @@ E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 10</td>
       <td class="greyout">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -711,7 +711,7 @@ E (F)</td>
       <td>Jon Rahm(W) E
 E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -727,7 +727,7 @@ E thru 10</td>
       <td>Rory McIlroy E
 E thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Bubba Watson +2
 +2 thru 13</td>
     </tr>
@@ -743,7 +743,7 @@ E thru 9</td>
       <td>Shane Lowry +1
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -805,7 +805,7 @@ E thru 9</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td>Jordan Spieth(W) +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 10</td>
       <td class="greyout">Sam Burns +2
@@ -839,7 +839,7 @@ E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -855,7 +855,7 @@ E thru 16</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Collin Morikawa +2
 +2 thru 10</td>
     </tr>
@@ -903,7 +903,7 @@ E thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -917,7 +917,7 @@ E thru 10</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td>Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Sam Burns +2
 +2 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -933,7 +933,7 @@ E thru 10</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td>Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 10</td>
       <td class="greyout">Patrick Reed +2
@@ -967,7 +967,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -983,7 +983,7 @@ E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1045,7 +1045,7 @@ E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td>Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1061,7 +1061,7 @@ E thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td>Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -1077,7 +1077,7 @@ E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
       <td>Jordan Spieth +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Collin Morikawa(W) +2
 +2 thru 10</td>
       <td class="greyout">Paul Casey
