--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:25:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:26:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,54 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-12</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Corey Conners -2
+-2 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka -2
+-2 thru 9</td>
+      <td class="greyout">Russell Henley +1
++1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-12</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Corey Conners -2
+-2 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland -1
+-1 thru 10</td>
+      <td class="greyout">Xander Schauffele(W) +1
++1 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Corey Conners(W) -2
+-2 thru 14</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm E
+E thru 10</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 10</td>
+    </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-11</td>
@@ -156,51 +204,19 @@ E (F)</td>
 +1 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 thru 14</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td class="greyout leftborder">Will Zalatoris -2
--2 thru 10</td>
-      <td class="greyout">Russell Henley +1
-+1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 thru 14</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland -1
--1 thru 10</td>
-      <td class="greyout">Xander Schauffele(W) +1
-+1 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith -4
 -4 (F)</td>
-      <td>Corey Conners(W) -2
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Corey Conners -2
 -2 thru 14</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm(W) E
 E thru 10</td>
-      <td class="greyout">Jordan Spieth +1
+      <td class="greyout">Patrick Cantlay +1
 +1 thru 10</td>
     </tr>
     <tr>
@@ -220,6 +236,22 @@ E thru 10</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 10</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith(W) -4
@@ -234,6 +266,22 @@ E thru 10</td>
 +1 thru 10</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -252,35 +300,19 @@ E thru 10</td>
 +1 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-9</td>
-      <td>Cameron Smith -4
--4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
       <td>Corey Conners -2
 -2 thru 14</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
+      <td>Webb Simpson -1
+-1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm(W) E
 E thru 10</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
-      <td class="greyout">Jordan Spieth +1
+      <td class="greyout">Xander Schauffele +1
 +1 thru 10</td>
     </tr>
     <tr>
@@ -298,22 +330,6 @@ E thru 10</td>
 +1 thru 10</td>
       <td class="greyout">Sam Burns +2
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 9</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -348,19 +364,19 @@ E thru 10</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -3
+      <td>Scottie Scheffler(W) -3
 -3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
       <td>Corey Conners -2
 -2 thru 14</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Webb Simpson -1
--1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm(W) E
+      <td>Jon Rahm E
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 10</td>
+      <td class="greyout">Jordan Spieth +1
 +1 thru 10</td>
     </tr>
     <tr>
@@ -377,6 +393,22 @@ E thru 10</td>
       <td class="greyout leftborder">Sam Burns +2
 +2 thru 12</td>
       <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -428,34 +460,18 @@ E thru 10</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
       <td>Corey Conners -2
 -2 thru 14</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
--4 (F)</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Patrick Cantlay +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td class="greyout leftborder">Jon Rahm E
+E thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -492,6 +508,38 @@ E thru 10</td>
 +1 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Xander Schauffele +1
++1 thru 10</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -524,6 +572,22 @@ E thru 10</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-6</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Corey Conners -2
+-2 thru 14</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +1
++1 thru 10</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
@@ -540,19 +604,19 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">-6</td>
-      <td>Corey Conners -2
--2 thru 14</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Rory McIlroy E
-E thru 9</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Jon Rahm(W) E
 E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 10</td>
+      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -567,7 +631,7 @@ E thru 10</td>
       <td>Jon Rahm(W) E
 E thru 10</td>
       <td class="greyout leftborder">Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 10</td>
     </tr>
@@ -604,22 +668,6 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Xander Schauffele +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
@@ -627,7 +675,7 @@ E thru 9</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Rory McIlroy(W) E
-E thru 9</td>
+E thru 10</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
@@ -636,36 +684,20 @@ E thru 10</td>
 +1 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Tony Finau -1
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Tiger Woods(W) -1
 -1 (F)</td>
-      <td>Patrick Cantlay +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-5</td>
-      <td>Corey Conners -2
--2 thru 14</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Rory McIlroy E
-E thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +1
-+1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
+E thru 10</td>
+      <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 11</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -677,7 +709,7 @@ E thru 9</td>
       <td>Robert MacIntyre E
 E thru 16</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 10</td>
       <td class="greyout">Patrick Cantlay +1
@@ -700,22 +732,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">-5</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Jon Rahm(W) E
-E thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -725,7 +741,7 @@ E thru 10</td>
       <td>Jon Rahm(W) E
 E thru 10</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
       <td class="greyout">Bubba Watson +2
@@ -755,7 +771,7 @@ E thru 9</td>
       <td>Tiger Woods -1
 -1 (F)</td>
       <td>Rory McIlroy(W) E
-E thru 9</td>
+E thru 10</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -778,22 +794,6 @@ E (F)</td>
 +2 thru 12</td>
       <td class="greyout">Brian Harman +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-4</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Tiger Woods(W) -1
--1 (F)</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Rory McIlroy E
-E thru 9</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 11</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -819,11 +819,43 @@ E thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-3</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Viktor Hovland(W) -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 10</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 10</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">-3</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 10</td>
+      <td>Jordan Spieth +1
++1 thru 10</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -860,22 +892,6 @@ E thru 10</td>
 +2 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">-2</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td>Patrick Cantlay +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tony Muir</td>
       <td class="bigbold">-2</td>
       <td>Brooks Koepka -2
@@ -904,22 +920,6 @@ E thru 10</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">-2</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td>Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -979,7 +979,7 @@ E (F)</td>
       <td>Jon Rahm(W) E
 E thru 10</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -993,7 +993,7 @@ E thru 9</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td>Jon Rahm E
 E thru 10</td>
       <td>Patrick Cantlay(W) +1
@@ -1009,7 +1009,7 @@ E thru 10</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
       <td>Sam Burns +2
@@ -1027,11 +1027,11 @@ E thru 9</td>
       <td>Tiger Woods -1
 -1 (F)</td>
       <td>Rory McIlroy E
-E thru 9</td>
+E thru 10</td>
       <td>Collin Morikawa(W) +2
 +2 thru 11</td>
       <td class="greyout leftborder">Gary Woodland +3
-+3 thru 15</td>
++3 thru 16</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
