--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:26:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:26:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -277,7 +277,7 @@ E (F)</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
       <td>Matthew Fitzpatrick -1
--1 thru 9</td>
+-1 thru 10</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -293,7 +293,7 @@ E (F)</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
       <td>Matthew Fitzpatrick -1
--1 thru 9</td>
+-1 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 10</td>
       <td class="greyout">Xander Schauffele +1
@@ -584,8 +584,8 @@ E thru 10</td>
 E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -694,8 +694,8 @@ E thru 10</td>
 -1 thru 10</td>
       <td>Rory McIlroy E
 E thru 10</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 11</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 12</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -755,7 +755,7 @@ E thru 10</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Matthew Fitzpatrick -1
--1 thru 9</td>
+-1 thru 10</td>
       <td>Shane Lowry +1
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -838,10 +838,10 @@ E thru 10</td>
 E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -886,10 +886,10 @@ E thru 10</td>
 E thru 16</td>
       <td>Jon Rahm E
 E thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -932,10 +932,10 @@ E thru 10</td>
 -1 thru 10</td>
       <td>Jon Rahm E
 E thru 10</td>
-      <td>Jordan Spieth +1
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 11</td>
       <td class="greyout">Patrick Reed +2
 +2 thru 14</td>
     </tr>
@@ -968,6 +968,22 @@ E (F)</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-1</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Tiger Woods -1
+-1 (F)</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td>Collin Morikawa(W) +1
++1 thru 12</td>
+      <td class="greyout leftborder">Gary Woodland +3
++3 thru 16</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1020,34 +1036,18 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Tiger Woods -1
--1 (F)</td>
-      <td>Rory McIlroy E
-E thru 10</td>
-      <td>Collin Morikawa(W) +2
-+2 thru 11</td>
-      <td class="greyout leftborder">Gary Woodland +3
-+3 thru 16</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">1</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td>Jordan Spieth +1
+      <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -1074,12 +1074,12 @@ E thru 10</td>
 E (F)</td>
       <td>Jon Rahm E
 E thru 10</td>
+      <td>Collin Morikawa(W) +1
++1 thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
-      <td>Jordan Spieth +1
+      <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Collin Morikawa(W) +2
-+2 thru 11</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
