--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:26:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:26:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ body {
       <td>Brooks Koepka -2
 -2 thru 9</td>
       <td>Matthew Fitzpatrick -1
--1 thru 9</td>
+-1 thru 10</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -214,8 +214,8 @@ E thru 10</td>
 -1 (F)</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 11</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -244,10 +244,10 @@ E thru 10</td>
 -2 thru 9</td>
       <td>Viktor Hovland(W) -1
 -1 thru 10</td>
-      <td>Patrick Cantlay +1
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -292,12 +292,12 @@ E thru 10</td>
 -2 thru 9</td>
       <td>Rory McIlroy E
 E thru 10</td>
-      <td>Xander Schauffele +1
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td class="greyout">Patrick Cantlay +1
 +1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -326,10 +326,26 @@ E thru 10</td>
 E thru 10</td>
       <td>Robert MacIntyre E
 E thru 16</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">-2</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Viktor Hovland(W) -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 10</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 14</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -340,28 +356,12 @@ E thru 16</td>
 -1 (F)</td>
       <td>Jon Rahm(W) E
 E thru 10</td>
-      <td>Jordan Spieth +1
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td class="greyout">Patrick Cantlay +1
 +1 thru 10</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">-1</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Viktor Hovland(W) -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td>Collin Morikawa +2
-+2 thru 11</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 14</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
