--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:28:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:29:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ body {
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Will Zalatoris -3
--3 thru 11</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Shane Lowry +1
-+1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -204,6 +188,22 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 11</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Jon Rahm +1
++1 thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 10</td>
+      <td class="greyout">Shane Lowry +1
++1 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-7</td>
       <td>Will Zalatoris -3
@@ -218,22 +218,6 @@ E thru 10</td>
 +1 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-7</td>
-      <td>Dustin Johnson -4
--4 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +1
-+1 thru 10</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -266,6 +250,22 @@ E thru 10</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-6</td>
+      <td>Dustin Johnson -4
+-4 thru 12</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Jordan Spieth(W) +1
++1 thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 11</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -317,29 +317,29 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-2</td>
       <td>Corey Conners(W) -2
 -2 thru 15</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Jon Rahm E
-E thru 10</td>
       <td>Robert MacIntyre E
 E thru 17</td>
-      <td class="greyout leftborder">Collin Morikawa +1
+      <td>Collin Morikawa +1
 +1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 11</td>
       <td class="greyout">Jordan Spieth +1
 +1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Viktor Hovland(W) -1
 -1 thru 10</td>
-      <td>Jon Rahm E
-E thru 10</td>
+      <td>Jon Rahm +1
++1 thru 11</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Patrick Reed +2
@@ -349,13 +349,13 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Tony Finau -1
 -1 (F)</td>
-      <td>Jon Rahm(W) E
-E thru 10</td>
+      <td>Jon Rahm(W) +1
++1 thru 11</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -365,11 +365,11 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -2
 -2 thru 15</td>
-      <td>Jon Rahm E
-E thru 10</td>
+      <td>Jon Rahm +1
++1 thru 11</td>
       <td>Patrick Cantlay +1
 +1 thru 11</td>
       <td>Tyrrell Hatton +1
@@ -381,11 +381,11 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -2
 -2 thru 15</td>
-      <td>Jon Rahm E
-E thru 10</td>
+      <td>Jon Rahm +1
++1 thru 11</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
       <td>Jordan Spieth +1
