--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:42:39 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:43:22 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ body {
       <td class="greyout leftborder">Viktor Hovland -1
 -1 thru 10</td>
       <td class="greyout">Xander Schauffele(W) +1
-+1 thru 10</td>
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -201,7 +201,7 @@ body {
       <td class="greyout leftborder">Talor Gooch E
 E (F)</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -247,7 +247,7 @@ E (F)</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 11</td>
     </tr>
@@ -297,7 +297,7 @@ E (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -313,7 +313,7 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -343,7 +343,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Adam Scott +2
 +2 (F)</td>
     </tr>
@@ -375,7 +375,7 @@ E (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Sam Burns +2
 +2 thru 12</td>
     </tr>
@@ -391,7 +391,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -407,7 +407,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Billy Horschel +2
 +2 thru 12</td>
     </tr>
@@ -439,7 +439,7 @@ E (F)</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 11</td>
     </tr>
@@ -485,7 +485,7 @@ E (F)</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -519,7 +519,7 @@ E (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Sam Burns +2
 +2 thru 12</td>
     </tr>
@@ -535,7 +535,7 @@ E (F)</td>
       <td>Rory McIlroy E
 E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 12</td>
     </tr>
@@ -549,7 +549,7 @@ E thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout">Justin Thomas +4
@@ -569,7 +569,7 @@ E thru 10</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -631,7 +631,7 @@ E thru 10</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 11</td>
     </tr>
@@ -693,7 +693,7 @@ E thru 10</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Marc Leishman +2
 +2 thru 14</td>
       <td class="greyout">Justin Thomas +4
@@ -743,7 +743,7 @@ E thru 10</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -807,7 +807,7 @@ E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -821,7 +821,7 @@ E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -857,7 +857,7 @@ E thru 10</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -885,7 +885,7 @@ E thru 17</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 +4 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -901,7 +901,7 @@ E thru 17</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -963,13 +963,13 @@ E thru 10</td>
       <td>Rory McIlroy E
 E thru 10</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td>Sam Burns +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Justin Rose +3
-+3 thru 16</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
+      <td class="greyout">Justin Rose +4
++4 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -983,7 +983,7 @@ E thru 10</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -1013,7 +1013,7 @@ E thru 10</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout">Justin Thomas +4
@@ -1031,7 +1031,7 @@ E thru 10</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1045,7 +1045,7 @@ E thru 10</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1075,7 +1075,7 @@ Out With Injury</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 10</td>
++1 thru 11</td>
       <td>Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
