--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:43:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:44:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ body {
 +2 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Joaquin Niemann -3
--3 (F)</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Rory McIlroy E
-E thru 10</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+3 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -3
@@ -220,22 +204,6 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-6</td>
-      <td>Sungjae Im -4
--4 thru 14</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) -1
--1 thru 10</td>
-      <td>Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -252,34 +220,18 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-6</td>
-      <td>Dustin Johnson -4
--4 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -4
+      <td>Cameron Smith -4
 -4 (F)</td>
-      <td>Corey Conners -2
--2 thru 16</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Xander Schauffele +1
+      <td>Joaquin Niemann -3
+-3 (F)</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td>Viktor Hovland +1
 +1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 11</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -316,6 +268,54 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-4</td>
+      <td>Sungjae Im -4
+-4 thru 14</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +1
++1 thru 11</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -4
+-4 thru 12</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td>Viktor Hovland +1
++1 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 thru 16</td>
+      <td>Viktor Hovland +1
++1 thru 11</td>
+      <td>Xander Schauffele +1
++1 thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners(W) -2
@@ -330,22 +330,6 @@ E thru 17</td>
 +1 thru 12</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">-1</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) -1
--1 thru 10</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 15</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -373,11 +357,27 @@ E thru 17</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td>Tyrrell Hatton +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">1</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +1
++1 thru 11</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 15</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
