--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:44:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:44:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -874,6 +874,22 @@ E thru 10</td>
 +4 (F)</td>
       <td class="greyout">Justin Rose +4
 +4 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Jon Rahm(W) +1
++1 thru 12</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
