--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:44:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:45:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -326,10 +326,10 @@ E (F)</td>
 -2 thru 16</td>
       <td>Viktor Hovland(W) +1
 +1 thru 11</td>
-      <td class="greyout leftborder">Tyrrell Hatton +1
+      <td class="greyout leftborder">Sam Burns +1
 +1 thru 13</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 12</td>
+      <td class="greyout">Tyrrell Hatton +1
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -340,10 +340,10 @@ E (F)</td>
 -3 (F)</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
-      <td>Patrick Cantlay +1
+      <td>Sam Burns +1
++1 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 12</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -358,10 +358,10 @@ E (F)</td>
 -2 thru 10</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 13</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 11</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -502,10 +502,10 @@ E thru 10</td>
 -1 (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 13</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 11</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -724,12 +724,12 @@ E thru 10</td>
 -2 thru 16</td>
       <td>Patrick Cantlay(W) +1
 +1 thru 12</td>
-      <td>Viktor Hovland +1
+      <td>Sam Burns +1
++1 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout">Jon Rahm +1
 +1 thru 12</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -770,14 +770,14 @@ E thru 10</td>
 -3 (F)</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
+      <td>Sam Burns +1
++1 thru 13</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td>Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
+      <td class="greyout">Jordan Spieth(W) +2
 +2 thru 11</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -788,10 +788,10 @@ E thru 10</td>
 -2 thru 16</td>
       <td>Shane Lowry(W) +1
 +1 (F)</td>
-      <td>Viktor Hovland +1
+      <td>Sam Burns +1
++1 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 11</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 12</td>
       <td class="greyout">Brian Harman +2
 +2 (F)</td>
     </tr>
@@ -828,6 +828,22 @@ E thru 17</td>
 +2 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td>Sam Burns +1
++1 thru 13</td>
+      <td>Xander Schauffele +1
++1 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Justin Rose +4
++4 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -4
@@ -860,22 +876,6 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy E
-E thru 10</td>
-      <td>Xander Schauffele +1
-+1 thru 11</td>
-      <td>Sam Burns +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Justin Rose +4
-+4 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-1</td>
       <td>Brooks Koepka -2
@@ -906,6 +906,22 @@ E thru 10</td>
 +1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">0</td>
+      <td>Will Zalatoris -3
+-3 thru 12</td>
+      <td>Sam Burns +1
++1 thru 13</td>
+      <td>Viktor Hovland +1
++1 thru 11</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -982,22 +998,6 @@ E thru 10</td>
 +1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 11</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">1</td>
-      <td>Will Zalatoris -3
--3 thru 12</td>
-      <td>Viktor Hovland +1
-+1 thru 11</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td>Sam Burns +2
-+2 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
