--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:59:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:59:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -425,7 +425,7 @@ E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
       <td class="greyout">Billy Horschel +2
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -612,10 +612,10 @@ E thru 12</td>
 -2 thru 17</td>
       <td>Hideki Matsuyama E
 E (F)</td>
-      <td>Xander Schauffele +1
+      <td>Marc Leishman +1
++1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Marc Leishman +2
-+2 thru 14</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
