--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:21:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:22:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,9 +149,9 @@ body {
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -249,7 +249,7 @@ E thru 13</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 14</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -259,7 +259,7 @@ E thru 13</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Xander Schauffele(W) +1
-+1 thru 12</td>
++1 thru 13</td>
       <td>Russell Henley +1
 +1 (F)</td>
       <td class="greyout leftborder">Justin Thomas +4
@@ -293,7 +293,7 @@ E thru 13</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas +4
@@ -316,6 +316,22 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Tyrrell Hatton E
+E thru 15</td>
+      <td>Shane Lowry +1
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
@@ -330,22 +346,6 @@ E thru 12</td>
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Patrick Cantlay E
-E thru 13</td>
-      <td>Tyrrell Hatton +1
-+1 thru 14</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -369,7 +369,7 @@ E thru 12</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td>Jon Rahm +2
 +2 thru 13</td>
       <td>Jordan Spieth +2
