--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:21:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:22:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -167,7 +167,7 @@ E thru 12</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Viktor Hovland +1
 +1 thru 13</td>
     </tr>
@@ -183,7 +183,7 @@ E thru 12</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -215,7 +215,7 @@ E thru 13</td>
       <td>Webb Simpson -1
 -1 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 13</td>
     </tr>
@@ -252,6 +252,22 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Tyrrell Hatton E
+E thru 15</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +1
++1 thru 13</td>
+      <td class="greyout">Sam Burns +1
++1 thru 15</td>
+    </tr>
+    <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -4
@@ -265,23 +281,7 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 12</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Viktor Hovland(W) +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 14</td>
-      <td class="greyout">Tyrrell Hatton +1
-+1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -313,7 +313,7 @@ E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 12</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -343,7 +343,7 @@ E thru 12</td>
       <td>Patrick Cantlay E
 E thru 13</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Adam Scott +2
 +2 (F)</td>
     </tr>
@@ -357,7 +357,7 @@ E thru 13</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +2
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
@@ -375,7 +375,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td class="greyout leftborder">Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -407,7 +407,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -425,7 +425,7 @@ E thru 12</td>
       <td class="greyout leftborder">Billy Horschel +1
 +1 thru 14</td>
       <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -437,9 +437,9 @@ E thru 12</td>
       <td>Tiger Woods -1
 -1 (F)</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 13</td>
     </tr>
@@ -453,9 +453,9 @@ E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 13</td>
     </tr>
@@ -519,7 +519,7 @@ E (F)</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -533,7 +533,7 @@ E (F)</td>
       <td>Rory McIlroy -1
 -1 thru 12</td>
       <td>Xander Schauffele(W) +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 13</td>
       <td class="greyout">Collin Morikawa +1
@@ -551,7 +551,7 @@ E (F)</td>
       <td>Marc Leishman +1
 +1 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -597,7 +597,7 @@ E (F)</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -629,7 +629,7 @@ E thru 13</td>
       <td>Patrick Cantlay(W) E
 E thru 13</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 13</td>
       <td class="greyout">Jon Rahm +2
@@ -645,7 +645,7 @@ E thru 13</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas +4
@@ -711,7 +711,7 @@ E thru 13</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -723,9 +723,9 @@ E thru 13</td>
       <td>Rory McIlroy -1
 -1 thru 12</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Justin Rose +4
@@ -743,7 +743,7 @@ E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 13</td>
     </tr>
@@ -789,7 +789,7 @@ E thru 12</td>
       <td>Shane Lowry(W) +1
 +1 (F)</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 13</td>
       <td class="greyout">Brian Harman +2
@@ -805,7 +805,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -821,7 +821,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 13</td>
       <td class="greyout">Jon Rahm +2
@@ -839,7 +839,7 @@ E thru 13</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout">Jon Rahm +2
 +2 thru 13</td>
     </tr>
@@ -869,7 +869,7 @@ E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
@@ -899,7 +899,7 @@ E thru 12</td>
       <td>Rory McIlroy -1
 -1 thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td>Jon Rahm(W) +2
 +2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -933,7 +933,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas +4
@@ -965,7 +965,7 @@ E thru 13</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -977,7 +977,7 @@ E thru 13</td>
       <td>Will Zalatoris -3
 -3 thru 13</td>
       <td>Sam Burns +1
-+1 thru 14</td>
++1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Jon Rahm +2
@@ -997,7 +997,7 @@ E thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1043,7 +1043,7 @@ E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td>Jon Rahm(W) +2
 +2 thru 13</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
@@ -1059,7 +1059,7 @@ E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td>Jon Rahm +2
 +2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -1089,7 +1089,7 @@ E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
-+1 thru 12</td>
++1 thru 13</td>
       <td>Jon Rahm +2
 +2 thru 13</td>
       <td>Jordan Spieth +2
