--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:24:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:24:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -260,10 +260,10 @@ E thru 14</td>
 -2 thru 14</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Shane Lowry +1
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -310,9 +310,9 @@ E thru 14</td>
 E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 13</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout">Jordan Spieth(W) +2
 +2 thru 13</td>
     </tr>
     <tr>
@@ -324,10 +324,10 @@ E thru 12</td>
 E thru 14</td>
       <td>Tyrrell Hatton E
 E thru 15</td>
-      <td>Shane Lowry +1
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -340,10 +340,10 @@ E thru 15</td>
 -1 (F)</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
-      <td>Robert MacIntyre +1
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -356,22 +356,22 @@ E thru 15</td>
 E thru 14</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Collin Morikawa +1
+      <td>Jon Rahm(W) +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 -2 (F)</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 13</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
       <td>Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -381,15 +381,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Viktor Hovland(W) +1
 +1 thru 13</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 thru 17</td>
       <td class="greyout">Luke List +5
