--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:24:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:24:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -246,10 +246,10 @@ E thru 12</td>
 -2 thru 14</td>
       <td>Webb Simpson -1
 -1 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm(W) +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -262,10 +262,10 @@ E thru 12</td>
 -2 thru 14</td>
       <td>Patrick Cantlay E
 E thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +1
+      <td class="greyout leftborder">Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout">Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm(W) +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -278,8 +278,8 @@ E thru 14</td>
 -2 thru 14</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -404,12 +404,12 @@ E thru 14</td>
 -2 (F)</td>
       <td>Tiger Woods -1
 -1 (F)</td>
-      <td>Sam Burns +1
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout leftborder">Sam Burns +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm(W) +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -420,10 +420,10 @@ E thru 14</td>
 -2 (F)</td>
       <td>Will Zalatoris -2
 -2 thru 14</td>
-      <td>Xander Schauffele +1
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -436,12 +436,12 @@ E thru 14</td>
 -3 (F)</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Sam Burns +1
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout leftborder">Sam Burns +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm(W) +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -472,8 +472,8 @@ E thru 12</td>
 E thru 14</td>
       <td class="greyout leftborder">Robert MacIntyre +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -488,8 +488,8 @@ E (F)</td>
 E thru 12</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 E (F)</td>
-      <td class="greyout">Jon Rahm(W) +2
-+2 thru 13</td>
+      <td class="greyout">Jon Rahm(W) +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -534,8 +534,8 @@ E (F)</td>
 -1 thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -552,8 +552,8 @@ E (F)</td>
 +1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -582,8 +582,8 @@ E (F)</td>
 E thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -600,8 +600,8 @@ E thru 14</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -644,10 +644,10 @@ E thru 14</td>
 -1 thru 12</td>
       <td>Bubba Watson E
 E thru 17</td>
-      <td>Viktor Hovland +1
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -740,12 +740,12 @@ E thru 14</td>
 -1 thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Viktor Hovland +1
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm(W) +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -774,9 +774,9 @@ E thru 14</td>
 E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 13</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout">Jordan Spieth(W) +2
 +2 thru 13</td>
     </tr>
     <tr>
@@ -822,9 +822,9 @@ E thru 14</td>
 E thru 12</td>
       <td>Sam Burns +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 13</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout">Jordan Spieth(W) +2
 +2 thru 13</td>
     </tr>
     <tr>
@@ -838,8 +838,8 @@ E thru 12</td>
 +1 (F)</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -850,14 +850,30 @@ E thru 12</td>
 -3 (F)</td>
       <td>Brooks Koepka E
 E thru 12</td>
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td>Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td>Xander Schauffele +1
++1 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 13</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -870,10 +886,10 @@ E thru 14</td>
 +1 thru 13</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -892,16 +908,16 @@ E thru 14</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">0</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Xander Schauffele +1
+      <td>Will Zalatoris -2
+-2 thru 14</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td>Jon Rahm(W) +2
-+2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas +4
@@ -916,10 +932,10 @@ E thru 14</td>
 E thru 14</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Xander Schauffele +1
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -932,10 +948,10 @@ E thru 12</td>
 E thru 14</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Collin Morikawa +1
+      <td>Jon Rahm(W) +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -948,44 +964,60 @@ E thru 12</td>
 E thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td>Xander Schauffele +1
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">1</td>
-      <td>Will Zalatoris -2
--2 thru 14</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Viktor Hovland +1
-+1 thru 13</td>
-      <td>Jon Rahm(W) +2
-+2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 13</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Will Zalatoris -2
 -2 thru 14</td>
       <td>Sam Burns +1
 +1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay E
+E thru 14</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 13</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay E
+E thru 14</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Collin Morikawa(W) +1
++1 thru 14</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 13</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -1004,48 +1036,16 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Jon Rahm(W) +2
-+2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 13</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">3</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 14</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 13</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Brooks Koepka E
 E thru 12</td>
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
 +1 thru 13</td>
-      <td>Jon Rahm(W) +2
-+2 thru 13</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 +4 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -1053,15 +1053,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 13</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1069,15 +1069,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Viktor Hovland(W) +1
 +1 thru 13</td>
       <td>Collin Morikawa +1
 +1 thru 14</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 thru 17</td>
       <td class="greyout">Jordan Spieth +2
@@ -1085,13 +1085,13 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Viktor Hovland +1
 +1 thru 13</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 13</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
       <td>Jordan Spieth +2
 +2 thru 13</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
