--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:40:00 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:40:43 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ body {
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td class="greyout leftborder">Russell Henley +1
 +1 (F)</td>
       <td class="greyout">Brooks Koepka +1
@@ -165,7 +165,7 @@ body {
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 14</td>
       <td class="greyout">Viktor Hovland +1
@@ -211,7 +211,7 @@ E thru 16</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -243,7 +243,7 @@ E (F)</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Webb Simpson -1
 -1 thru 17</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
@@ -259,7 +259,7 @@ E (F)</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
@@ -291,7 +291,7 @@ E thru 14</td>
       <td>Corey Conners(W) -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -305,7 +305,7 @@ E thru 14</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Patrick Cantlay E
@@ -355,7 +355,7 @@ E thru 14</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Jon Rahm +1
 +1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -417,7 +417,7 @@ E thru 14</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 13</td>
       <td>Brooks Koepka +1
@@ -497,7 +497,7 @@ E (F)</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Rory McIlroy -1
 -1 thru 13</td>
       <td>Collin Morikawa E
@@ -513,7 +513,7 @@ E thru 15</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Brooks Koepka +1
@@ -623,7 +623,7 @@ E thru 14</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-4</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Tiger Woods(W) -1
 -1 (F)</td>
       <td>Rory McIlroy -1
@@ -641,7 +641,7 @@ E thru 15</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Rory McIlroy -1
 -1 thru 13</td>
       <td>Brooks Koepka +1
@@ -650,22 +650,6 @@ E thru 15</td>
 +1 thru 14</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Bubba Watson E
-E thru 17</td>
-      <td>Jon Rahm(W) +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 14</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -682,6 +666,22 @@ E thru 14</td>
 +1 thru 14</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 13</td>
+      <td>Jon Rahm(W) +1
++1 thru 14</td>
+      <td>Viktor Hovland +1
++1 thru 14</td>
+      <td class="greyout leftborder">Bubba Watson +1
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -705,7 +705,7 @@ E thru 14</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
@@ -815,7 +815,7 @@ E thru 14</td>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">-1</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Collin Morikawa E
@@ -959,7 +959,7 @@ E thru 14</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">1</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
       <td>Viktor Hovland +1
@@ -991,7 +991,7 @@ E thru 14</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">2</td>
       <td>Will Zalatoris -2
--2 thru 14</td>
+-2 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 14</td>
       <td>Jon Rahm +1
