--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:54:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:55:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -213,11 +213,11 @@ body {
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Tyrrell Hatton E
-E thru 16</td>
+E thru 17</td>
       <td class="greyout leftborder">Viktor Hovland(W) +1
 +1 thru 14</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 16</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -342,8 +342,8 @@ E (F)</td>
 -1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 16</td>
+      <td class="greyout leftborder">Sam Burns +3
++3 thru 17</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -392,8 +392,8 @@ E (F)</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 16</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -488,8 +488,8 @@ E (F)</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 16</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -504,8 +504,8 @@ E (F)</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 15</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 16</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -742,10 +742,10 @@ E thru 14</td>
 +1 (F)</td>
       <td>Viktor Hovland +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 16</td>
-      <td class="greyout">Brian Harman +2
+      <td class="greyout leftborder">Brian Harman +2
 +2 (F)</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -824,24 +824,8 @@ E thru 14</td>
 +1 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 14</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy E
-E thru 14</td>
-      <td>Xander Schauffele +1
-+1 thru 14</td>
-      <td>Sam Burns +2
-+2 thru 16</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Justin Rose +4
-+4 (F)</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -956,6 +940,22 @@ E thru 14</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Xander Schauffele +1
++1 thru 14</td>
+      <td>Sam Burns +3
++3 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Justin Rose +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">1</td>
       <td>Patrick Cantlay -1
@@ -1028,10 +1028,10 @@ E thru 14</td>
 +1 thru 14</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
-      <td>Sam Burns +2
-+2 thru 16</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
 +2 thru 14</td>
+      <td class="greyout leftborder">Sam Burns +3
++3 thru 17</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
