--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:54:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:55:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ body {
 -2 (F)</td>
       <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 16</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 14</td>
+      <td class="greyout">Sam Burns +3
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -323,7 +323,7 @@ E thru 16</td>
       <td>Patrick Cantlay -1
 -1 thru 15</td>
       <td>Tyrrell Hatton E
-E thru 16</td>
+E thru 17</td>
       <td>Jon Rahm +1
 +1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry +1
