--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:05:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 7:05:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -356,10 +356,10 @@ E (F)</td>
 -3 (F)</td>
       <td>Patrick Cantlay -2
 -2 thru 16</td>
-      <td>Billy Horschel +1
-+1 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +1
+      <td>Brooks Koepka +1
 +1 thru 14</td>
+      <td class="greyout leftborder">Billy Horschel +2
++2 thru 17</td>
       <td class="greyout">Xander Schauffele +2
 +2 thru 15</td>
     </tr>
